[package]
name = "guacamole"
version = "0.1.0"
authors = ["Wojciech Polak <wojciech.polak@anixe.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
with_tests = ["tracing-subscriber"]

[dependencies]
async-trait = "0.1.36"
tokio = { version = "0.2.22", features = ["sync"] }
futures = "0.3.5"
itertools = "0.9.0"

tracing = "0.1.18"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.10", optional = true }

[dev-dependencies]
tokio = { version = "0.2.22", features = ["time"] }
smol = { version = "0.3.3", features = ["tokio02"] }
tracing-subscriber = "0.2.10"
